CSS on login font Roboto and footer

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -3,6 +3,10 @@
   background: #112D4E;
   padding: 10px 0;
   color: #CCCCCC;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
 }
 #footer p {
   margin-top: 17px;
