--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -23,3 +23,9 @@
 .bg-dark-blue {
   background: #3b5998;
 }
+
+.global-wrapper {
+  position: relative;
+  min-height: calc(100vh);
+  padding-bottom: 83px;
+}
