--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs container">
+
     <div class="row">
       <div class="col-xs-6"><%= f.input :first_name, required: true, autofocus: true, placeholder: "First name", label: false %></div>
       <div class="col-xs-6"><%= f.input :last_name, required: true, placeholder: "Last name", label: false %></div>
@@ -17,9 +18,9 @@
     </div>
     <div class="row">
       <div class="col-xs-6 flexbox"><div class="flex-item", style="color: #999999;">Date of birth:</div><div class="flex-item"><%= f.input :date_of_birth, :as => :date, :start_year => Date.today.year - 18,
-  :end_year => 1900, :order => [ :day, :month, :year], :required => true, label: false %></div>
+  :end_year => 1900, :order => [ :day, :month, :year], :required => true, label: false %></div></div>
+      <div class="col-xs-6"><%= f.input :city, required: true, placeholder: "City", label: false %></div>
     </div>
-    <div class="col-xs-6"><%= f.input :city, required: true, placeholder: "City", label: false %></div>
   </div>
 
   <div class="form-actions container">
