--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -24,10 +24,10 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #3F72AF;
 
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #112D4E;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
