--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -62,9 +62,9 @@
   border: 2px solid #112D4E;
 }
 .navbar-wagon-button:hover {
-  color: #112D4E;
-  background: #F9F7F7;
-  border-color: #112D4E;
+  color: $brand-color;
+  transition: color 0.8s ease;
+  text-decoration: none;
 }
 
 /* Navbar dropdown menu */
