--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,17 +22,13 @@ padding-top: 30px;
   justify-content: center;
 }
 .banner h1 {
-  font-size: 50px;
-  font-weight: bold;
+  font-size: 80px;
+  font-weight: light;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
 }
 .banner p {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: lighter;
   color: rgba(255, 255, 255, 0.7);
   margin-bottom: 20px;
 }
- .banner-button {
-  background-color: #3F72AF;
-  border-color: #3F72AF;
- }
