--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="wrapper wrapper-color">
+<div class="wrapper wrapper-grey">
   <div class="container">
     <h2 class="text-center">How it works</h2>
     <div class="row">
