--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,700' rel='stylesheet' type='text/css'>
+    <script src="http://js.pusher.com/2.0/pusher.min.js"></script>
     <title>TODO</title>
     <%= csrf_meta_tags %>
 
