--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.3)), url(<%= image_url '7.jpg' %>); background-position: center center;">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.3)), url(<%= image_url 'homepage.jpg' %>); background-position: center center;">
   <div class="banner-content">
     <h1>EasyGlasses</h1>
     <p>Free online optical exam</p>
