Principaux élémnents de la show du user

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -16,6 +16,12 @@
   color: #999999;
 }
 
+#review_rating {
+  border-radius: 2px;
+  -webkit-appearance: none;
+  color: #999999;
+}
+
 .help-block {
   color: #D23333;
   font-style: italic;
