--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,28 +3,61 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-6">
-      <h4><%= 'Your record history' %></h4>
+    <div class="col-xs-12 col-sm-6 col-md-8">
+      <div class="scroll_fix">
+      <h4>Your record history</h4>
+      <% vision_test_number = 1 %>
+        <% current_user.exams.each do |exam| %>
+          <div class="card">
+            <div class="card_title">Vision test n°<%= vision_test_number %></div>
+            <% vision_test_number += 1 %>
+            <div class="test_results">
+              <h2>Vision score: <%= exam.score_total %></h2>
+              <p>Left eye: <%= exam.score_left %></p>
+              <p>Right eye: <%= exam.score_right %></p>
+            </div>
+            <div class="test_date">
+              <p>Test date: <%= exam.date %></p>
+            </div>
+            <a class="card-link" href="#" ></a>
+          </div>
+          <hr>
+        <% end %>
+      </div>
     </div>
-    <div class="col-xs-6 text-right">
+
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <% if @user.review == nil %>
-        <%= link_to "Give us a feedback", "user_reviews_path" %>
-        <%= simple_form_for [@user, @review] do |f| %>
-          <div class="col-sm-offset-4 col-sm-4"> <%= f.input :rating, label: false, :collection => 1..5, include_blank: "Give a mark" %></div>
-          <div class="col-sm-offset-4 col-sm-4"> <%= f.input :description, label: false, input_html: { placeholder: "Please detail your feedback" } %></div>
-          <%= f.input :user_id, :as => :hidden, :input_html => { :value => @user.id } %>
-          <div class="col-sm-offset-4 col-sm-4 text-center"> <%= f.button :submit, "Submit rating", class: "btn btn-primary" %> </div>
-        <% end %>
+        <div class="fixed-item">
+          <h4>Give us a feedback</h4>
+          <%= simple_form_for [@user, @review] do |f| %>
+            <div><%= f.input :rating, label: false, :collection => 1..5, include_blank: "Give a mark" %></div>
+            <div><%= f.input :description, label: false, hint: '5 words min - 100 words max', input_html: { placeholder: "Please detail your feedback" } %></div>
+            <%= f.input :user_id, :as => :hidden, :input_html => { :value => @user.id } %>
+            <div class="text-center"> <%= f.button :submit, "Submit rating", class: "btn btn-primary" %> </div>
+          <% end %>
+        </div>
       <% else %>
-        <%= 'Your feedback on the website' %><br>
-        <% @user.review.rating.times do %>
-          <i class="fa fa-star" aria-hidden="true" style="color: #FFBE00;"></i>
-        <% end %>
-        <% (5 - @user.review.rating).times do %>
-          <i class="fa fa-star-o" aria-hidden="true" style="color: grey;"></i>
-        <% end %>
-        <p><%= @user.review.description %></p>
+
+        <div class="card fixed-item">
+          <div class="card_title">Your feedback on the website</div>
+          <div class="rating">
+            <% @user.review.rating.times do %>
+              <i class="fa fa-star" aria-hidden="true" style="color: #FFBE00;"></i>
+            <% end %>
+            <% (5 - @user.review.rating).times do %>
+              <i class="fa fa-star-o" aria-hidden="true" style="color: grey;"></i>
+            <% end %>
+          </div>
+          <div class="review_content">
+            <h4>Your comment:</h4><br>
+            <p>"<%= @user.review.description %>"</p>
+          </div>
+          <a class="card-link" href="#" ></a>
+        </div>
+
       <% end %>
+
     </div>
   </div>
 </div>
