--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,3 +32,12 @@ padding-top: 30px;
   color: rgba(255, 255, 255, 0.7);
   margin-bottom: 20px;
 }
+
+#button-home a {
+  color: white;
+}
+
+#button-home a:link {
+  text-decoration:none;
+  color: white;
+}
