--- a/app/views/pages/onboarding.html.erb
+++ b/app/views/pages/onboarding.html.erb
@@ -5,21 +5,34 @@
         <div class="row">
           <div class="col-xs-offset-1 col-xs-10">
             <h4 style="padding-top: 20px;">Are you currently pregnant or nursing?</h4>
-
+            <%= f.radio_button :pregnant, true %>
+            <%= f.label :pregnant, "Yes", value: "true"  %>
+            <br>
+            <%= f.radio_button :pregnant, false %>
+            <%= f.label :pregnant, "No", value: "false" %>
             <h4 style="padding-top: 10px;">Do you have any of the following chronic health conditions: diabetes, heart disease, high blood pressure or migraines with visual distortions?</h4>
-            <p>Yes</p>
-            <p>No</p>
-            <h4 style="padding-top: 10px;">Are you currently experiencing any pain, discomfort or sudden loss od vision with your eyes?</h4>
-            <p>Yes</p>
-            <p>No</p>
+            <%= f.radio_button :chronic_health_conditions, true %>
+            <%= f.label :chronic_health_conditions, "Yes", value: "true"  %>
+            <br>
+            <%= f.radio_button :chronic_health_conditions, false %>
+            <%= f.label :chronic_health_conditions, "No", value: "false" %>
+            <h4 style="padding-top: 10px;">Are you currently experiencing any pain, discomfort or sudden loss of vision with your eyes?</h4>
+            <%= f.radio_button :current_pain, true %>
+            <%= f.label :current_pain, "Yes", value: "true"  %>
+            <br>
+            <%= f.radio_button :current_pain, false %>
+            <%= f.label :current_pain, "No", value: "false" %>
             <h4 style="padding-top: 10px;">Are you currently experiencing any type of eye disease or had eye surgery within the past 12 months?</h4>
-            <p>Yes</p>
-            <p>No</p>
+            <%= f.radio_button :eye_surgery, true %>
+            <%= f.label :eye_surgery, "Yes", value: "true"  %>
+            <br>
+            <%= f.radio_button :eye_surgery, false %>
+            <%= f.label :eye_surgery, "No", value: "false" %>
           </div>
         </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-offset-6 col-md-6 text-center">
-          <div id="next_1" class="btn btn-primary btn-lg banner-button">Next</div>
+          <div id="next_1" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
@@ -71,10 +84,10 @@
       </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_2" class="btn btn-primary btn-lg banner-button">Previous</div>
+          <div id="previous_2" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_2" class="btn btn-primary btn-lg banner-button">Next</div>
+          <div id="next_2" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
@@ -112,10 +125,10 @@
       </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_3" class="btn btn-primary btn-lg banner-button">Previous</div>
+          <div id="previous_3" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_3" class="btn btn-primary btn-lg banner-button">Next</div>
+          <div id="next_3" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
@@ -128,8 +141,9 @@
         <div class="col-xs-12 col-md-8">
           <p>Your phone is used to answer questions during the exam. A reliable WiFi connection will ensure a smooth exam experience.</p>
           <br>
-          <p>Android or iPhone number</p>
-          <p>ADD FORM FOR NUMBER</p>
+          <%= f.label :phone_number %>
+          <br>
+          <%= f.text_field :phone_number %>
         </div>
         <div class="col-xs-12 col-md-4 text-center">
           <i class="fa fa-mobile" style="font-size: 200px;"></i>
@@ -137,10 +151,10 @@
       </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_4" class="btn btn-primary btn-lg banner-button">Previous</div>
+          <div id="previous_4" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_4" class="btn btn-primary btn-lg banner-button">Next</div>
+          <div id="next_4" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
@@ -153,8 +167,12 @@
         <div class="col-xs-12 col-md-6">
           <p>Portions of the exam will be taken 10 FT from your computer screen. We will provide you with instructions to measure 10 FT with your shoes off.</p>
           <br>
-          <p>Shoe size</p>
-          <p>ADD FORM FOR SHOE SIZE AND GENDER</p>
+          <%= f.label :shoe_size %>
+          <br>
+          <%= f.number_field :shoe_size, step: 0.5 %>
+          <br>
+          <br>
+          <%= f.input :gender, collection: ["Male", "Female"] %>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
           <p>Image of measure !!!</p>
@@ -162,10 +180,10 @@
       </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_5" class="btn btn-primary btn-lg banner-button">Previous</div>
+          <div id="previous_5" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_5" class="btn btn-primary btn-lg banner-button">Next</div>
+          <div id="next_5" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
@@ -179,9 +197,9 @@
           <p>Your vision information will help customize your exam and help our doctors provide you with the most accurate prescription. After answering these final questions, we'll be ready to begin your exam.</p>
           <br>
           <p>What do you have on right now?</p>
-          <p>ADD FORM FOR</p>
+          <%= f.input :wearing_on_now, label: false, collection: ["Glasses", "Contact lens", "Neither"] %>
           <p>What have you ever worn in the past?</p>
-          <p>ADD FORM FOR</p>
+          <%= f.input :worn_in_past, label: false, collection: ["Glasses", "Contact lens", "Both", "Neither"] %>
         </div>
         <div class="col-xs-12 col-md-4 text-center">
           <i class="fa fa-file-text-o" style="font-size: 150px;"></i>
@@ -189,10 +207,10 @@
       </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_6" class="btn btn-primary btn-lg banner-button">Previous</div>
+          <div id="previous_6" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_6" class="btn btn-primary btn-lg banner-button">Next</div>
+          <div id="next_6" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
@@ -204,10 +222,10 @@
 
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_7" class="btn btn-primary btn-lg banner-button">Previous</div>
+          <div id="previous_7" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="next_7" class="btn btn-primary btn-lg banner-button">Next</div>
+          <div id="next_7" class="btn btn-primary btn-lg">Next</div>
         </div>
       </div>
     </div>
@@ -232,10 +250,10 @@
         </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="previous_8" class="btn btn-primary btn-lg banner-button">Previous</div>
+          <div id="previous_8" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <div id="submit" class="btn btn-primary btn-lg banner-button">Submit</div>
+          <div><%= f.submit "Submit", class: "btn btn-primary btn-lg" %></div>
         </div>
       </div>
     </div>
