--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,6 +42,18 @@
     <% end %>
 
     <!-- Button (call-to-action) -->
-    <%= link_to t(".top_call_to_action", default: "Test your sight!"), "#", class: "navbar-wagon-item navbar-wagon-button" %>
+    <% if current_user != nil %>
+      <%= link_to onboarding_path, class: "navbar-wagon-button-container" do %>
+        <div class="navbar-wagon-item navbar-wagon-button">
+          Test you sight!
+        </div>
+      <% end %>
+    <% else %>
+      <%= link_to new_user_registration_path, class: "navbar-wagon-button-container" do %>
+        <div class="navbar-wagon-item navbar-wagon-button">
+          Test you sight!
+        </div>
+      <% end %>
+    <% end %>
   </div>
 </div>
