--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -253,6 +253,7 @@
           <div id="previous_8" class="btn btn-primary btn-lg">Previous</div>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
+          <div><%= f.input :exam_id, as: :hidden, input_html: { value: params[:id] } %></div>
           <div><%= f.submit "Submit", class: "btn btn-primary btn-lg" %></div>
         </div>
       </div>
