--- a/app/assets/stylesheets/pages/_mobile.scss
+++ b/app/assets/stylesheets/pages/_mobile.scss
@@ -4,10 +4,9 @@
   color: white;
   border-radius: 50%;
   font-size: 50px;
-  height: 200px;
-  width: 200px;
-  margin-bottom: 200px;
-  padding: 50px;
+  height: 100px;
+  width: 100px;
+  margin-bottom: 100px
 }
 
 .flexbox {
@@ -25,4 +24,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.container-min-height-without-footer {
+  min-height: 100vh
 }
