--- a/app/views/exams/mobile_results.html.erb
+++ b/app/views/exams/mobile_results.html.erb
@@ -1,1 +1,4 @@
-<h1>La view de mobile results</h1>
+<div class="wrapper wrapper-grey text-center" style="min-height: 100vh;">
+  <h1>Well done!</h1>
+  <p>The test is now finished</p>
+</div>
