--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -3,7 +3,7 @@
   <div class="container" style="margin-top: 80px;">
     <div class="row">
       <div class="col-xs-offset-3 col-xs-6">
-        <p><%= @exam.score_total %></p>
+        <p><%= @exam.score_total %> / 20</p>
       </div>
     </div>
     <div class="row">
@@ -16,10 +16,10 @@
     </div>
     <div class="row">
       <div class="col-xs-6">
-        <p><%= @exam.score_left %></p>
+        <p><%= @exam.score_left %> / 10</p>
       </div>
       <div class="col-xs-6">
-        <p><%= @exam.score_right %></p>
+        <p><%= @exam.score_right %> / 10</p>
       </div>
     </div>
     <div class="row">
