Exam date solved

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
               <p>Right eye: <%= exam.score_right %></p>
             </div>
             <div class="test_date">
-              <p>Test date: <%= exam.date %></p>
+              <p>Test date: <%= exam.exam_date %></p>
             </div>
             <a class="card-link" href="#" ></a>
           </div>
