--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -219,7 +219,30 @@
   <div id="step_7" class="wrapper wrapper-grey hidden">
     <div class="container container-min-height">
       <h2 class="text-center onboarding-h2">Calibrate your computer screen</h2>
-
+      <p>This step will ensure that all images are displayed at the precise size for accurate results.</p>
+      <br>
+      <div class="row row-min-height">
+        <div class="col-xs-12 col-md-4">
+          <ol>
+            <li>
+              Take out a credit or debit card. Place it directly against the card on your screen, so that it lays flat.
+            </li>
+            <br>
+            <li>
+              Click and drag the resize button so that the card on the screen matches the size of the actual card you’ve placed against the screen.
+            </li>
+            <br>
+            <li>
+              When both cards match in size, click “Continue”.
+            </li>
+          </ol>
+        </div>
+        <div class="col-xs-12 col-md-8">
+          <div id="relative" class='box'>
+<!--             <div id="absolute" class="small-box"></div> -->
+          </div>
+        </div>
+      </div>
       <div class="row next-previous-buttons">
         <div class="col-xs-12 col-md-6 text-center">
           <div id="previous_7" class="btn btn-primary btn-lg">Previous</div>
