--- a/app/assets/stylesheets/pages/_onboarding.scss
+++ b/app/assets/stylesheets/pages/_onboarding.scss
@@ -1,4 +1,4 @@
-    .onboarding-icon {
+.onboarding-icon {
   font-size: 100px;
 }
 
@@ -21,5 +21,20 @@
 }
 
 .container-min-height {
-  min-height: calc(100vh - 70px - 83px - 60px) // 70px navbar, 83px footer, 60px padding wrapper
+  min-height: calc(100vh - 70px - 83px - 60px); // 70px navbar, 83px footer, 60px padding wrapper
+}
+
+.row-min-height {
+  min-height: 300px;
+}
+
+.box {
+  margin: 0;
+  padding: 0;
+  top: 0px;
+  left: 0px;
+  width: 400px;
+  height: 250px;
+  background-image: url('credit_card_front.png');
+  background-size: cover !important;
 }
