--- a/app/views/exams/desktop_questions.html.erb
+++ b/app/views/exams/desktop_questions.html.erb
@@ -2,7 +2,7 @@
 
 <div id="step_1" class="wrapper wrapper-grey">
   <div class="container container-min-height">
-    <h2 class="text-center">Question <%= Question.find_by(position: 1).position %></h2>
+    <!-- <h2 class="text-center">Question <%= Question.find_by(position: 1).position %></h2> -->
       <div class="row">
         <div class="col-xs-offset-1 col-xs-10">
             <div class="orientation-size text-center">
@@ -20,7 +20,7 @@
 
   <div id="step_<%= question.position %>" class="wrapper wrapper-grey hidden">
     <div class="container container-min-height">
-      <h2 class="text-center">Question <%= question.position %></h2>
+      <!-- <h2 class="text-center">Question <%= question.position %></h2> -->
         <div class="row">
           <div class="col-xs-offset-1 col-xs-10">
             <div class="orientation-size text-center">
