--- a/app/views/exams/mobile_questions.html.erb
+++ b/app/views/exams/mobile_questions.html.erb
@@ -3,37 +3,93 @@
   <div class="container container-min-height-without-footer text-center">
     <div class="row">
       <div class="col-xs-offset-1 col-xs-10">
-        <p style="font-size: 20px; margin-bottom: 50px">Select the object you see.</p>
-        <div class="flexbox">
-          <div class="flex-item">
-            <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 4), method: :post, class: "mobile-button flexbox" do %>
-              <div style="transform: rotate(0deg)">
-                E
-              </div>
-            <% end %>
+          <div id="slide-1" class="hidden">
+            <%= image_tag "cover-your-left-eye.png", { class: 'mobile-picture' }%>
+            <h3>Gently cover your right eye now.</h3>
+            <div id="next-1" class="btn btn-primary"><strong>Next</strong></div>
           </div>
-          <div class="flex-item vertical-items">
-            <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 1), method: :post, class: "mobile-button flexbox" do %>
-              <div style="transform: rotate(90deg)">
-                E
+
+          <div id="slide-2" class="hidden">
+            <p style="font-size: 20px; margin-bottom: 50px">Select the object you see.</p>
+            <div class="flexbox">
+              <div class="flex-item">
+                <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 4), method: :post, class: "mobile-button flexbox" do %>
+                  <div style="transform: rotate(0deg)">
+                    E
+                  </div>
+                <% end %>
               </div>
-            <% end %>
-            <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 3), method: :post, class: "mobile-button flexbox" do %>
-              <div style="transform: rotate(270deg)">
-                E
+              <div class="flex-item vertical-items">
+                <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 1), method: :post, class: "mobile-button flexbox" do %>
+                  <div style="transform: rotate(90deg)">
+                    E
+                  </div>
+                <% end %>
+                <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 3), method: :post, class: "mobile-button flexbox" do %>
+                  <div style="transform: rotate(270deg)">
+                    E
+                  </div>
+                <% end %>
               </div>
-            <% end %>
+              <div class="flex-item">
+                <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 2), method: :post, class: "mobile-button flexbox" do %>
+                  <div style="transform: rotate(180deg)">
+                    E
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          <%= link_to "Can't tell", user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 0), method: :post, class: "btn btn-primary" %>
           </div>
-          <div class="flex-item">
-            <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 2), method: :post, class: "mobile-button flexbox" do %>
-              <div style="transform: rotate(180deg)">
-                E
-              </div>
-            <% end %>
+
+          <div id="slide-3" class="hidden">
+            <h2>Uncover and relax your eyes.</h3>
+            <h3>You've completed your right eye visual acuity assessment.</h4>
+            <div id="next-3" class="btn btn-primary"><strong>Continue</strong></div>
           </div>
-        </div>
-      <%= link_to "Can't tell", user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 0), method: :post, class: "btn btn-primary" %>
+
+          <div id="slide-4" class="hidden" style="padding: 100px 0px">
+            <%= image_tag "cover-your-right-eye.png", {class: 'mobile-picture' } %>
+            <h3>Gently cover your left eye now.</h3>
+            <div id="next-4" class="btn btn-primary"><strong>Next</strong></div>
+          </div>
+
+      </div>
     </div>
   </div>
 </div>
-</div>
+
+
+<% content_for(:after_js) do %>
+  <script type="text/javascript">
+    $(document).ready(function() {
+   <% if Exam.find(params[:id]).user_answers.count == 0 %>
+        $('#slide-1').removeClass('hidden');
+        $('#next-1').click(function(event){
+          $('#slide-1').addClass('hidden');
+          $('#slide-2').removeClass('hidden');
+        });
+      <% else %>
+        <% if Exam.find(params[:id]).user_answers.count < 10 %>
+          $('#slide-2').removeClass('hidden');
+        <% else %>
+          <% if Exam.find(params[:id]).user_answers.count == 10 %>
+            $('#slide-3').removeClass('hidden');
+            $('#next-3').click(function(event){
+              $('#slide-3').addClass('hidden');
+              $('#slide-4').removeClass('hidden');
+            });
+              $('#next-4').click(function(event){
+                $('#slide-4').addClass('hidden');
+                $('#slide-2').removeClass('hidden');
+              });
+          <% else %>
+            <% if Exam.find(params[:id]).user_answers.count < 20 %>
+              $('#slide-2').removeClass('hidden');
+            <% end %>
+          <% end %>
+        <% end %>
+      <% end %>
+    });
+  </script>
+<% end %>
