--- a/app/assets/stylesheets/layout/_mobile_onboarding.scss
+++ b/app/assets/stylesheets/layout/_mobile_onboarding.scss
@@ -4,7 +4,8 @@
 }
 
 .mobile {
-  background-color: #696969;
+  background-color: #DBE2EF;
+  padding: 10px;
 }
 
 .mobile-screen {
@@ -22,6 +23,3 @@
 .onboarding-instructions .btn-primary {
   width: 25vw;
 }
-
-
-
