--- a/app/views/layouts/mobile_onboarding.html.erb
+++ b/app/views/layouts/mobile_onboarding.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
   <body>
-    <div class="global-wrapper mobile">
+    <div>
       <%= render 'shared/mobile_navbar' %>
       <%= yield %>
       <%= javascript_include_tag 'application' %>
