--- a/app/views/exams/mobile_questions.html.erb
+++ b/app/views/exams/mobile_questions.html.erb
@@ -1,8 +1,8 @@
 
-<div class="wrapper wrapper-grey">
+<div class="wrapper-mobile-grey">
   <div class="container container-min-height-without-footer text-center">
     <div class="row">
-      <div class="col-xs-offset-1 col-xs-10">
+
           <div id="slide-1" class="hidden">
             <%= image_tag "cover-your-left-eye.png", { class: 'mobile-picture' }%>
             <h3>Gently cover your right eye now.</h3>
@@ -54,7 +54,6 @@
             <div id="next-4" class="btn btn-primary"><strong>Next</strong></div>
           </div>
 
-      </div>
     </div>
   </div>
 </div>
