--- a/app/views/exams/mobile_onboarding.html.erb
+++ b/app/views/exams/mobile_onboarding.html.erb
@@ -1,4 +1,4 @@
-<div id="onboarding-slide-1" class="container mobile-screen">
+<div id="onboarding-slide-1" class="">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
