--- a/app/views/exams/mobile_questions.html.erb
+++ b/app/views/exams/mobile_questions.html.erb
@@ -1,6 +1,4 @@
 
-<div class="wrapper-mobile-grey">
-  <div class="container container-min-height-without-footer text-center">
     <div class="row">
 
           <div id="slide-1" class="hidden">
@@ -44,19 +42,17 @@
 
           <div id="slide-3" class="hidden">
             <h2>Uncover and relax your eyes.</h3>
-            <h3>You've completed your right eye visual acuity assessment.</h4>
+            <h3 style="padding: 30px 0px">You've completed your right eye visual acuity assessment.</h4>
             <div id="next-3" class="btn btn-primary"><strong>Continue</strong></div>
           </div>
 
-          <div id="slide-4" class="hidden" style="padding: 100px 0px">
+          <div id="slide-4" class="hidden">
             <%= image_tag "cover-your-right-eye.png", {class: 'mobile-picture' } %>
             <h3>Gently cover your left eye now.</h3>
             <div id="next-4" class="btn btn-primary"><strong>Next</strong></div>
           </div>
 
     </div>
-  </div>
-</div>
 
 
 <% content_for(:after_js) do %>
