--- a/app/views/layouts/mobile_onboarding.html.erb
+++ b/app/views/layouts/mobile_onboarding.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div>
       <%= render 'shared/mobile_navbar' %>
-      <%= yield %>
+      <div class=wrapper-mobile-grey><div class="container-mobile containter text-center"> <%= yield %></div></div>
       <%= javascript_include_tag 'application' %>
       <%= yield(:after_js) %>
     </div>
