--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -3,27 +3,27 @@
   <div class="container" style="margin-top: 80px;">
     <div class="row">
       <div class="col-xs-offset-3 col-xs-6">
-        <p><%= @exam.score_total %> / 20</p>
+        <h3><%= @exam.score_total %> / 20</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-6">
-        <p>Left eye</p>
+        <h3>Left eye</h3>
       </div>
       <div class="col-xs-6">
-        <p>Right eye</p>
+        <h3>Right eye</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-6">
-        <p><%= @exam.score_left %> / 10</p>
+        <h3><%= @exam.score_left %> / 10</h3>
       </div>
       <div class="col-xs-6">
-        <p><%= @exam.score_right %> / 10</p>
+        <h3><%= @exam.score_right %> / 10</h3>
       </div>
     </div>
     <div class="row">
-      <p><%= @exam.recommendation %></p>
+      <h3><%= @exam.recommendation %></h3>
     </div>
   </div>
 </div>
