--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -78,7 +78,7 @@
         <div class="col-xs-12 col-md-4 text-center">
           <div class="onboarding-card">
             <h3>Step 3</h3>
-            <p>After the exam, we'll ask you a few medical questions. Then our doctors wil review your results and prescribe within 24 hours.</p>
+            <p>After the exam, you'll be able know if you need glasses and if you should go to a doctor to further test your view.</p>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
       <div class="row" style="padding-bottom: 10px;">
         <div class="col-xs-12 col-md-8">
           <h3>Turn up your computer volume</h3>
-          <p>You will receive audio instructions from your computer throughout the exam. Make sure your computer audio is loud enough to hear from 10 FT away.</p>
+          <p>You will receive audio instructions from your computer throughout the exam. Make sure your computer audio is loud enough to hear from 3 meters away.</p>
         </div>
         <div class="col-xs-12 col-md-4 text-center">
           <i class="fa fa-volume-up onboarding-icon" style="padding-top: 10px;"></i>
@@ -117,7 +117,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8">
           <h3>Set up your screen</h3>
-          <p>Turn up your screen brightness and turn off your screensaver or any power-saving features to avoid disruptions during the exam. Move your screen within 1-2 FT from the edge of your desk.</p>
+          <p>Turn up your screen brightness and turn off your screensaver or any power-saving features to avoid disruptions during the exam. Move your screen within 50 cm from the edge of your desk.</p>
         </div>
         <div class="col-xs-12 col-md-4 text-center">
           <i class="fa fa-sun-o onboarding-icon" style="padding-top: 10px;"></i>
@@ -165,7 +165,7 @@
       <h2 class="text-center onboarding-h2">Remove your shoes</h2>
       <div class="row">
         <div class="col-xs-12 col-md-6">
-          <p>Portions of the exam will be taken 10 FT from your computer screen. We will provide you with instructions to measure 10 FT with your shoes off.</p>
+          <p>Portions of the exam will be taken 3 meters from your computer screen. We will provide you with instructions to measure 3 meters with your shoes off.</p>
           <br>
           <%= f.label :shoe_size %>
           <br>
@@ -175,7 +175,7 @@
           <%= f.input :gender, collection: ["Male", "Female"] %>
         </div>
         <div class="col-xs-12 col-md-6 text-center">
-          <p>Image of measure !!!</p>
+          <%= image_tag "10ftaway.png" %>
         </div>
       </div>
       <div class="row next-previous-buttons">
@@ -238,7 +238,8 @@
           </ol>
         </div>
         <div class="col-xs-12 col-md-8">
-          <div id="relative" class='box'>
+          <div id="relative">
+          <%= image_tag "credit_card_front.png", class: "box" %>
 <!--             <div id="absolute" class="small-box"></div> -->
           </div>
         </div>
