--- a/app/views/exams/mobile_onboarding.html.erb
+++ b/app/views/exams/mobile_onboarding.html.erb
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div id="onboarding-slide-2" class="container mobile-screen hidden">
+<div id="onboarding-slide-2" class="hidden">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
@@ -31,7 +31,7 @@
   </div>
 </div>
 
-<div id="onboarding-slide-3" class="container mobile-screen hidden">
+<div id="onboarding-slide-3" class="hidden">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
@@ -48,7 +48,7 @@
     </div>
   </div>
 </div>
-<div id="onboarding-slide-4" class="container mobile-screen hidden">
+<div id="onboarding-slide-4" class="hidden">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
@@ -65,7 +65,7 @@
     </div>
   </div>
 </div>
-<div id="onboarding-slide-5" class="container mobile-screen hidden">
+<div id="onboarding-slide-5" class="hidden">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
@@ -82,7 +82,7 @@
     </div>
   </div>
 </div>
-<div id="onboarding-slide-6" class="container mobile-screen hidden">
+<div id="onboarding-slide-6" class="hidden">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
@@ -99,7 +99,7 @@
     </div>
   </div>
 </div>
-<div id="onboarding-slide-7" class="container mobile-screen hidden">
+<div id="onboarding-slide-7" class="hidden">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
@@ -116,7 +116,7 @@
     </div>
   </div>
 </div>
-<div id="onboarding-slide-8" class="container mobile-screen hidden">
+<div id="onboarding-slide-8" class="hidden">
   <div class="row">
     <div class="col-xs-12">
       <div class="onboarding-instructions">
