redirection sur onboarding eligible

--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -54,7 +54,7 @@
   <div id="step_3" class="wrapper wrapper-grey hidden">
     <div class="container container-min-height">
       <h2 class="text-center">Computer and room set up</h2>
-      <div class="row" style="padding-bottom: 10px;">
+      <div class="row">
         <div class="col-xs-12 col-md-8">
           <h3>Turn up your computer volume</h3>
           <p>You will receive audio instructions from your computer throughout the exam. Make sure your computer audio is loud enough to hear from 3 meters away.</p>
@@ -63,7 +63,7 @@
           <i class="fa fa-volume-up onboarding-icon" style="padding-top: 10px;"></i>
         </div>
       </div>
-      <div class="row" style="padding-bottom: 10px;">
+      <div class="row">
         <div class="col-xs-12 col-md-8">
           <h3>Make your room as dark as possible</h3>
           <p>Close your window blinds and turn off or dim your lights in your room to avoid glare.</p>
