--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,13 +5,13 @@
     <% if current_user != nil %>
       <%= link_to exams_path, method: "post" do %>
         <div id ="button-home" class="btn btn-primary btn-lg">
-          Test you sight!
+          Test your sight!
         </div>
       <% end %>
     <% else %>
       <%= link_to new_user_registration_path do %>
         <div id ="button-home" class="btn btn-primary btn-lg">
-          Test you sight!
+          Test your sight!
         </div>
       <% end %>
     <% end %>
