--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -45,13 +45,13 @@
     <% if current_user != nil %>
       <%= link_to exams_path, method: "post", class: "navbar-wagon-button-container" do %>
         <div class="navbar-wagon-item navbar-wagon-button">
-          Test you sight!
+          Test your sight!
         </div>
       <% end %>
     <% else %>
       <%= link_to new_user_registration_path, class: "navbar-wagon-button-container" do %>
         <div class="navbar-wagon-item navbar-wagon-button">
-          Test you sight!
+          Test your sight!
         </div>
       <% end %>
     <% end %>
